# bank_reports_parser

./: .gitignore  config.yml  main.py  pyproject.toml
app/extractors/: __init__.py  base_extractor.py  factory.py  tbank_extractor.py
app/parsers/: __init__.py  base_parser.py  factory.py  tbank_parser.py
